make text bigger on mobile

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
           aria-label="close sidebar"
           class="drawer-overlay"
         ></label>
-        <ul class="menu p-4 w-80 min-h-full bg-base-200 flex flex-col gap-2">
+        <ul
+          class="menu p-4 w-96 min-h-full bg-base-200 flex flex-col gap-2 text-2xl"
+        >
           <!-- Sidebar content here -->
-          <li>
-            <a class="btn btn-ghost text-xl" href="index.html"
-              ><img class="h-full" src="images/logo-dark.png"
+          <li class="mb-12">
+            <a class="btn btn-ghost" href="index.html"
+              ><img class="w-full" src="images/logo-dark.png"
             /></a>
           </li>
           <li><a href="search_properties.html">Закупуване на имот</a></li>
@@ -52,7 +54,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
                   viewBox="0 0 24 24"
-                  class="inline-block w-6 h-6 stroke-current"
+                  class="inline-block w-full h-full stroke-current"
                 >
                   <path
                     stroke-linecap="round"
