--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" data-theme="mytheme">
   <head>
     <!--=============== basic  ===============-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
     <title>Titan Properties Real Estate</title>
     <meta name="robots" content="index, follow" />
@@ -15,19 +16,17 @@
   <body>
     <div class="drawer">
       <input id="my-drawer-3" type="checkbox" class="drawer-toggle" />
-      <div class="drawer-side z-10">
+      <div class="drawer-side z-20">
         <label
           for="my-drawer-3"
           aria-label="close sidebar"
           class="drawer-overlay"
         ></label>
-        <ul
-          class="menu p-4 w-96 min-h-full bg-base-200 flex flex-col gap-2 text-2xl"
-        >
+        <ul class="menu p-4 w-80 min-h-full bg-base-200 flex flex-col gap-2">
           <!-- Sidebar content here -->
-          <li class="mb-12">
+          <li class="">
             <a class="btn btn-ghost" href="index.html"
-              ><img class="w-full" src="images/logo-dark.png"
+              ><img class="h-full" src="images/logo-dark.png"
             /></a>
           </li>
           <li><a href="search_properties.html">Закупуване на имот</a></li>
@@ -43,7 +42,7 @@
       <div class="drawer-content flex flex-col">
         <!-- Start nav bar -->
         <div class="navbar bg-base-100">
-          <div class="navbar-start">
+          <div class="w-full xl:navbar-start xl:w-[50%]">
             <div class="flex-none xl:hidden">
               <label
                 for="my-drawer-3"
@@ -54,7 +53,7 @@
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
                   viewBox="0 0 24 24"
-                  class="inline-block w-full h-full stroke-current"
+                  class="inline-block w-7 h-7 stroke-current"
                 >
                   <path
                     stroke-linecap="round"
@@ -65,15 +64,15 @@
                 </svg>
               </label>
             </div>
-            <a class="btn btn-ghost text-xl hidden xl:flex" href="index.html"
+            <a class="btn btn-ghost hidden xl:flex" href="index.html"
               ><img class="h-full" src="images/logo-dark.png"
             /></a>
           </div>
-          <div class="navbar-center z-10">
-            <a class="btn btn-ghost text-xl block xl:hidden" href="index.html"
-              ><img class="h-full" src="images/logo-dark.png"
-            /></a>
-            <ul class="menu menu-horizontal px-1 hidden xl:flex">
+          <a class="btn btn-ghost flex xl:hidden" href="index.html"
+            ><img class="h-full" src="images/logo-dark.png"
+          /></a>
+          <div class="navbar-center z-10 hidden xl:flex">
+            <ul class="menu menu-horizontal px-1">
               <li><a href="search_properties.html">Закупуване</a></li>
               <li><a href="search_properties.html">Наемане</a></li>
               <li><a href="search_properties.html">Нови сгради</a></li>
@@ -84,8 +83,8 @@
               <li><a href="videos.html">Видеа</a></li>
             </ul>
           </div>
-          <div class="navbar-end">
-            <div class="dropdown hidden xl:flex">
+          <div class="navbar-end hidden xl:flex">
+            <div class="dropdown">
               <div class="dropdown dropdown-end mr-4">
                 <div
                   tabindex="0"
