--- a/index.html
+++ b/index.html
@@ -436,7 +436,8 @@
                 <div
                   class="card glass shrink-0 w-full max-w-sm shadow-2xl mr-[0] lg:mr-[10%] indicator"
                 >
-                  <span class="indicator-item badge badge-primary"
+                  <span
+                    class="indicator-item badge badge-primary indicator-center"
                     >продажба</span
                   >
                   <div class="card-body">
@@ -475,7 +476,8 @@
                 <div
                   class="card glass shrink-0 w-full max-w-sm shadow-2xl mr-[0] lg:mr-[10%] indicator"
                 >
-                  <span class="indicator-item badge badge-primary"
+                  <span
+                    class="indicator-item badge badge-primary indicator-center"
                     >продажба</span
                   >
                   <div class="card-body">
@@ -514,7 +516,8 @@
                 <div
                   class="card glass shrink-0 w-full max-w-sm shadow-2xl mr-[0] lg:mr-[10%] indicator"
                 >
-                  <span class="indicator-item badge badge-primary"
+                  <span
+                    class="indicator-item badge badge-primary indicator-center"
                     >продажба</span
                   >
                   <div class="card-body">
@@ -553,7 +556,8 @@
                 <div
                   class="card glass shrink-0 w-full max-w-sm shadow-2xl mr-[0] lg:mr-[10%] indicator"
                 >
-                  <span class="indicator-item badge badge-primary"
+                  <span
+                    class="indicator-item badge badge-primary indicator-center"
                     >продажба</span
                   >
                   <div class="card-body">
