--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
           <div class="hero-overlay bg-opacity-80"></div>
           <div class="hero-content text-center text-neutral-content">
             <div class="max-w-[80%]">
-              <h1 class="mb-5 text-5xl font-bold">
+              <h1 class="mb-5 text-2xl font-bold xl:text-5xl">
                 Продавате имот, но ви е писнало от непрестанни огледи и ниски
                 оферти?
               </h1>
