update mobile menu

--- a/backup.html
+++ b/backup.html
@@ -2,6 +2,7 @@
 <html lang="en" data-theme="mytheme">
   <head>
     <!--=============== basic  ===============-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
     <title>Titan Properties Real Estate</title>
     <meta name="robots" content="index, follow" />
