more updates to mobile and added ratings to team members

--- a/aboutus.html
+++ b/aboutus.html
@@ -425,7 +425,7 @@
         <!-- Page content here -->
 
         <div class="flex flex-col my-32 items-center gap-6 mx-[5%]">
-          <h1 class="text-5xl font-bold">
+          <h1 class="text-2xl xl:text-5xl font-bold">
             Нашата
             <span class="text-primary underline">история</span> и скромното ни
             начало.
@@ -559,6 +559,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -582,6 +583,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
                 <!-- Open the modal using ID.showModal() method -->
                 <dialog id="my_modal_1" class="modal modal-middle">
@@ -726,6 +728,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -749,6 +752,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
               </div>
               <div
@@ -819,6 +823,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -842,6 +847,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
               </div>
             </div>
@@ -915,6 +921,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -938,6 +945,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
               </div>
               <div
@@ -1008,6 +1016,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -1031,6 +1040,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
               </div>
               <div
@@ -1101,6 +1111,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -1124,6 +1135,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
               </div>
             </div>
@@ -1197,6 +1209,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -1220,6 +1233,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
               </div>
               <div
@@ -1290,6 +1304,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -1313,6 +1328,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
               </div>
               <div
@@ -1383,6 +1399,7 @@
                           d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"
                         />
                       </svg>
+                      <div class="text-gray-900 ml-4">4.3 (32)</div>
                     </div>
                     <blockquote>
                       <p class="text-slate-500">
@@ -1406,6 +1423,7 @@
                       </div>
                     </figcaption>
                   </figure>
+                  <button class="btn btn-primary">Остави отзив</button>
                 </div>
               </div>
             </div>
