--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@
           <div class="hero-overlay bg-opacity-80"></div>
           <div class="hero-content text-center text-neutral-content">
             <div class="max-w-[80%]">
-              <h1 class="mb-5 text-5xl font-bold">
+              <h1 class="mb-5 text-2xl xl:text-5xl font-bold">
                 Искате да се развивате в сферата на търговията?
               </h1>
               <p class="mb-5">
