--- a/ocenka.html
+++ b/ocenka.html
@@ -805,7 +805,7 @@
             </div>
 
             <div class="flex flex-col 2xl:block">
-              <h1 class="text-5xl font-bold">
+              <h1 class="text-2xl xl:text-5xl font-bold">
                 Открийте
                 <span class="text-primary underline">реалната стойност</span> на
                 вашия имот сега!
